--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,10 +41,18 @@ aliases:
         passcode: true
     - test-ios:
         name: "iOS 13"
-        e: ios13
+        e:
+          name: mac
+          xcode: "11.0.0"
+        device: "iPhone XR"
+        ios_version: "13.0"    
     - test-ios:
         name: iOS 12
-        e: ios12
+        e:
+          name: mac
+          xcode: "11.0.0"
+        device: "iPhone XR"
+        ios_version: "12.4"
 
   - &all-jobs-sfdx
     - test-android:
@@ -76,11 +84,19 @@ aliases:
         e: android-react-native
     - test-ios:
         name: "iOS 13 SFDX"
-        e: ios13
+        e:
+          name: mac
+          xcode: "11.0.0"
+        device: "iPhone XR"
+        ios_version: "13.0"
         sfdx: true
     - test-ios:
         name: "iOS 12 SFDX"
-        e: ios12
+        e:
+          name: mac
+          xcode: "11.0.0"
+        device: "iPhone XR"
+        ios_version: "12.4"
         sfdx: true
 
 executors:
@@ -100,24 +116,18 @@ executors:
       - TERM: "dumb"
       - GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx1024m -XX:+HeapDumpOnOutOfMemoryError"'
       - FASTLANE_SKIP_UPDATE_CHECK: true
-  ios12:
+  mac:
+    parameters:
+      xcode:
+        type: string
+        default: "11.0.0"
     working_directory: ~/SalesforceMobileSDK-UITests
     macos:
-      xcode: "10.3.0"
-    device: "iPhone XR"
-    ios_version: "12.4"
+      xcode: << parameters.xcode >>
     shell: /bin/bash --login -eo pipefail
     environment:
       - FASTLANE_SKIP_UPDATE_CHECK: true
-  ios13:
-    working_directory: ~/SalesforceMobileSDK-UITests
-    macos:
-      xcode: "11.0.0"
-    device: "iPhone 11"
-    ios_version: "13.0"
-    shell: /bin/bash --login -eo pipefail
-    environment:
-      - FASTLANE_SKIP_UPDATE_CHECK: true
+    
 
 version: 2.1
 jobs:
