--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -271,11 +271,11 @@ jobs:
             when: always        
         - run:
             name: Test Advanced Auth
-            command: cd .circleci && fastlane ios type:native device:"<< parameters.device >>" ios:"<< parameters.ios_version >> sfdx:"<< parameters.sfdx>>" adv_auth:true
+            command: cd .circleci && fastlane ios type:native device:"<< parameters.device >>" ios:"<< parameters.ios_version >>" sfdx:"<< parameters.sfdx>>" adv_auth:true
             when: always
         - run:
             name: Test Password
-            command: cd .circleci && fastlane ios type:native device:"<< parameters.device >>" ios:"<< parameters.ios_version >> sfdx:"<< parameters.sfdx>>" passcode:true
+            command: cd .circleci && fastlane ios type:native device:"<< parameters.device >>" ios:"<< parameters.ios_version >>" sfdx:"<< parameters.sfdx>>" passcode:true
             when: always
         - store_artifacts:
             path: test_output
