--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -458,7 +458,7 @@ jobs:
           command: HOMEBREW_NO_AUTO_UPDATE=1 brew install carthage
       - run:
           name: Test Carthage
-          command: cd .circleci && fastlane ios test_carthage device:"<< parameters.device >>" ios:"<< parameters.ios_version >>"
+          command: cd .circleci && fastlane test_carthage device:"<< parameters.device >>" ios:"<< parameters.ios_version >>"
           when: always
       - store_artifacts:
           path: test_output
