--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,7 +169,7 @@ jobs:
           steps:
             - run:
                 name: Test iOS << parameters.ios_version >> Template
-                command: cd .circleci && fastlane ios template:<< parameters.app_type >> sfdx:<< parameters.sfdx >>
+                command: cd .circleci && fastlane ios template:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >>
                 when: always
       - unless:
           condition: << parameters.template >>
@@ -179,18 +179,18 @@ jobs:
                 steps:
                   - run:
                       name: Test iOS << parameters.ios_version >> Complex Hybrid - Account Editor
-                      command: cd .circleci && fastlane ios type:hybrid_local complexHybrid:accounteditor sfdx:<< parameters.sfdx >>
+                      command: cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios_version >> complexHybrid:accounteditor sfdx:<< parameters.sfdx >>
                       when: always
                   - run:
                       name: Test iOS << parameters.ios_version >> Complex Hybrid - Mobile Sync Explorer
-                      command: cd .circleci && fastlane ios type:hybrid_local complexHybrid:mobilesyncexplorer sfdx:<< parameters.sfdx >>
+                      command: cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios_version >> complexHybrid:mobilesyncexplorer sfdx:<< parameters.sfdx >>
                       when: always
             - unless: 
                 condition: << parameters.complex_hybrid >>
                 steps:
                   - run:
                       name: Test << parameters.app_type >> iOS << parameters.ios_version >>
-                      command: cd .circleci && fastlane ios type:<< parameters.app_type >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >> passcode:<< parameters.passcode >>
+                      command: cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >> passcode:<< parameters.passcode >>
                       when: always
 
   test-carthage:
