--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,18 +162,24 @@ jobs:
                 steps:
                   - run:
                       name: Test iOS << parameters.ios_version >> Complex Hybrid - Account Editor
-                      command: cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios_version >> complexHybrid:accounteditor sfdx:<< parameters.sfdx >>
+                      command:  |
+                          sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
+                          cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios_version >> complexHybrid:accounteditor sfdx:<< parameters.sfdx >>
                       when: always
                   - run:
                       name: Test iOS << parameters.ios_version >> Complex Hybrid - Mobile Sync Explorer
-                      command: cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios_version >> complexHybrid:mobilesyncexplorer sfdx:<< parameters.sfdx >>
+                      command:  |
+                          sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
+                          cd .circleci && fastlane ios type:hybrid_local ios:<< parameters.ios_version >> complexHybrid:mobilesyncexplorer sfdx:<< parameters.sfdx >>
                       when: always
             - unless: 
                 condition: << parameters.complex_hybrid >>
                 steps:
                   - run:
                       name: Test << parameters.app_type >> iOS << parameters.ios_version >>
-                      command: cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >> passcode:<< parameters.passcode >>
+                      command:  |
+                          sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
+                          cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >> passcode:<< parameters.passcode >>
                       when: always
                       no_output_timeout: 20m
 
