--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -202,7 +202,7 @@ jobs:
           when: always
       - run:
           name: Install Carthage
-          command: HOMEBREW_NO_AUTO_UPDATE=1 brew install carthage
+          command: HOMEBREW_NO_AUTO_UPDATE=1 brew upgrade carthage
       - run:
           name: Test Carthage
           command: cd .circleci && fastlane test_carthage ios:"<< parameters.ios_version >>"
