--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 anchors:
-  - &latest-xcode "12.4.0"
-  - &latest-ios   "14.4"
-  - &min-ios      "13.7"
+  - &latest-xcode "13.1.0"
+  - &latest-ios   "15.0"
+  - &min-ios      "14.5"
   - &MobileSyncExplorerReactNative
       https://github.com/forcedotcom/SalesforceMobileSDK-Templates/MobileSyncExplorerReactNative\#dev
   - &MobileSyncSwiftTemplate
@@ -39,9 +39,6 @@ jobs:
         type: boolean
         default: false
       adv_auth:
-        type: boolean
-        default: false
-      passcode:
         type: boolean
         default: false
       complex_hybrid:
@@ -93,7 +90,7 @@ jobs:
                 steps:
                   - run:
                       name: Test << parameters.app_type >> Android
-                      command: cd .circleci && fastlane android type:<< parameters.app_type >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >> passcode:<< parameters.passcode >>
+                      command: cd .circleci && fastlane android type:<< parameters.app_type >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >>
                       when: always
       - run: 
           name: Copy test results data
@@ -126,9 +123,6 @@ jobs:
         type: boolean
         default: false
       adv_auth:
-        type: boolean
-        default: false
-      passcode:
         type: boolean
         default: false
       complex_hybrid:
@@ -179,7 +173,7 @@ jobs:
                       name: Test << parameters.app_type >> iOS << parameters.ios_version >>
                       command:  |
                           sudo chown -R `whoami` /Users/`whoami`/Library/Preferences/
-                          cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >> passcode:<< parameters.passcode >>
+                          cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >>
                       when: always
                       no_output_timeout: 20m
 
@@ -255,9 +249,6 @@ workflows:
           name: Android Advanced Auth
           adv_auth: true
       - test-android:
-          name: Android Passcode
-          passcode: true
-      - test-android:
           name: Android Complex Hybrid
           complex_hybrid: true
       - test-ios:
@@ -287,12 +278,6 @@ workflows:
           matrix:
             parameters:  
               adv_auth: [true]
-              ios_version: [*min-ios, *latest-ios]
-      - test-ios:
-          name: iOS << matrix.ios_version >> Passcode
-          matrix:
-            parameters:  
-              passcode: [true]
               ios_version: [*min-ios, *latest-ios]
       - test-ios:
           name: iOS << matrix.ios_version >> Complex Hybrid
