--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,8 @@ jobs:
           path: firebase
       - store_test_results:
           path: firebase/results
+      - store_artifacts:
+          path: test_output
 
   test-ios:
     executor: << parameters.e >>
@@ -176,6 +178,8 @@ jobs:
                           cd .circleci && fastlane ios type:<< parameters.app_type >> ios:<< parameters.ios_version >> sfdx:<< parameters.sfdx >> adv_auth:<< parameters.adv_auth >>
                       when: always
                       no_output_timeout: 20m
+      - store_artifacts:
+          path: test_output
 
   test-carthage:
     executor: << parameters.e >>
